2003-04-12  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/dl-tls.c (_dl_allocate_tls_init): Add cast to
	avoid warning.

	* sysdeps/unix/sysv/linux/i386/sigaction.c (__libc_sigaction): If
	__ASSUME_VSYSCALL is defined don't add restorer.
	* sysdeps/unix/sysv/linux/kernel-features.h: Define
	__ASSUME_VSYSCALL for 2.5.53.

2003-04-11  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/libc-start.c: Cleanup MAIN_AUXVEC_ARG handling.
	Remove HAVE_CANCELBUF code.  Replace with code using the new
	initializers for unwind-based cleanup handling.
	* sysdeps/generic/unwind.h: Update from latest gcc version.
	* sysdeps/unix/sysv/linux/i386/sysdep.h: Define labels in a few
	places to allow unwind data generation.
	* sysdeps/i386/bits/setjmp.h: Allow file to be included multiple times.
	* sysdeps/x86_64/bits/setjmp.h: Likewise.
	* sysdeps/sh/bits/setjmp.h: Likewise.
	* sysdeps/powerpc/bits/setjmp.h: Likewise.
	* sysdeps/unix/sysv/linux/ia64/bits/setjmp.h: Likewise.
	* sysdeps/alpha/bits/setjmp.h: Likewise.

2003-04-11  Roland McGrath  <roland@redhat.com>

	* csu/tst-empty.c: New file.
	* csu/Makefile (tests, tests-static): Add it.

2003-04-11  Jakub Jelinek  <jakub@redhat.com>

	* string/test-strcmp.c (do_random_tests): Test whether return value
	has been promoted to wordsize if the ABI requires caller to do so.
	* string/test-strncmp.c (do_random_tests): Likewise.
	* string/test-memcmp.c (do_random_tests): Likewise.

	* sysdeps/powerpc/powerpc64/strcmp.S (strcmp): Sign extend rRTN
	before returning.

	* sysdeps/unix/sysv/linux/powerpc/powerpc64/fe_nomask.c
	(__fe_nomask_env): Try prctl even if __ASSUME_NEW_PRCTL_SYSCALL
	is not defined, but the prctl constants are.

	* string/tester.c (test_strcmp): Fix a typo.

2003-04-09  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/alpha/fpu/bits/mathdef.h: Remove FLT_EVAL_METHOD definition.
	* sysdeps/powerpc/fpu/bits/mathdef.h: Likewise.

2003-04-08  Alexandre Oliva  <aoliva@redhat.com>
